--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
     <title>YROS Consultoria - Cloud, DevOps, SRE</title>
     <meta name="description" content="Consultoria especializada em Cloud, DevOps, SRE, Plataforma e FinOps para levar sua empresa ao próximo nível." />
     <meta name="author" content="YROS" />
 
-    <meta property="og:title" content="YROS Consultoria - Cloud, DevOps, SRE" />
+    <meta property="og:title" content="YROS - Cloud, DevOps, SRE" />
     <meta property="og:description" content="Consultoria especializada em Cloud, DevOps, SRE, Plataforma e FinOps." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
